# mockiapi

./: Cargo.toml  Dockerfile  README.MD  README.md  docker-comnpose.yml  docker-compose.yml  init.bat  init.sh
.github/: FUNDING.yml
.github/workflows/: rust.yml
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: Home.svelte  app.css  main.js
frontend/src/assets/: functions.js
src/: authentication.rs  endpoint_handler.rs  lib.rs  main.rs  models.rs  rate_limit.rs  utils.rs
src/handlers/: graphql.rs  grpc.rs  mod.rs  multipart.rs  params.rs
src/middlewares/: authentication.rs  dynamic_vars.rs  grpc_registry.rs  mod.rs
src/models/: auth.rs  endpoint.rs  errors.rs  graphql.rs  grpc.rs  mod.rs  multipart.rs
src/routes/: dynamic_response.rs  endpoints.rs  mod.rs
tests/: dynamic_response_test.rs  graphql_test.rs  grpc_test.rs
uploads/: 43ba96c5-7d84-4c74-8650-a8a7c98470cf.json  dynamic_vars.json  file.json  graphql.json
