[package]
name = "mockiapi"
version = "0.1.5"
edition = "2024"
authors = ["Eduardo Santos <eduf.santos@mail.com>"]
repository = "https://github.com/sfeSantos/mockiapi"
description = "A flexible, feature-rich mock API server with an intuitive frontend that simplifies development."
license = "MIT OR Apache-2.0"
keywords = ["mock", "rest", "api"]
categories = ["development-tools::testing", "web-programming::http-server"]

[dependencies]
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
warp = "0.3.7"
bytes = "1.10.1"
log = "0.4.26"
base64 = "0.22.1"
urlencoding = "2.1.3"
env_logger = "0.11.7"
